--- a/iOS8Sampler/Samples/CodeGeneratorViewController.xib
+++ b/iOS8Sampler/Samples/CodeGeneratorViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CodeGeneratorViewController">
@@ -16,11 +16,18 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3my-4H-NME">
+                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3my-4H-NME">
                     <rect key="frame" x="10" y="159" width="300" height="300"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="300" id="VIc-TB-KYi"/>
+                    </constraints>
                 </imageView>
-                <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="uVK-IO-nEt">
+                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="uVK-IO-nEt">
                     <rect key="frame" x="70" y="109" width="180" height="29"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="180" id="6ym-ge-uzc"/>
+                        <constraint firstAttribute="height" constant="28" id="h2R-rI-S4I"/>
+                    </constraints>
                     <segments>
                         <segment title="AztecCode"/>
                         <segment title="Barcode"/>
@@ -31,12 +38,23 @@
                 </segmentedControl>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="3my-4H-NME" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="7GB-6z-WDQ"/>
+                <constraint firstAttribute="centerY" secondItem="3my-4H-NME" secondAttribute="centerY" constant="-25" id="CVH-Cn-qft"/>
+                <constraint firstItem="uVK-IO-nEt" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="109" id="R3H-pb-YNf"/>
+                <constraint firstItem="3my-4H-NME" firstAttribute="top" secondItem="uVK-IO-nEt" secondAttribute="bottom" constant="22" id="TCe-d4-4xi"/>
+                <constraint firstAttribute="centerX" secondItem="3my-4H-NME" secondAttribute="centerX" id="TVo-ah-2K8"/>
+                <constraint firstAttribute="centerX" secondItem="uVK-IO-nEt" secondAttribute="centerX" id="gWT-0g-2JK"/>
+                <constraint firstAttribute="trailing" secondItem="3my-4H-NME" secondAttribute="trailing" constant="10" id="pcm-Z2-O9c"/>
+            </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4">
-                <size key="portraitSize" width="320" height="568"/>
-                <size key="landscapeSize" width="568" height="320"/>
-            </simulatedScreenMetrics>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="TCe-d4-4xi"/>
+                </mask>
+            </variation>
         </view>
     </objects>
 </document>
