--- a/iOS8Sampler/Samples/CustomFiltersViewController.xib
+++ b/iOS8Sampler/Samples/CustomFiltersViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomFiltersViewController">
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" fixedFrame="YES" image="wwdc" translatesAutoresizingMaskIntoConstraints="NO" id="YUG-3Z-g6V">
+                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" image="wwdc" translatesAutoresizingMaskIntoConstraints="NO" id="YUG-3Z-g6V">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                 </imageView>
                 <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Osj-2l-aRF">
@@ -32,15 +32,16 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="YUG-3Z-g6V" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="BSi-2L-bEX"/>
+                <constraint firstItem="YUG-3Z-g6V" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="O2v-Sg-MWp"/>
+                <constraint firstAttribute="trailing" secondItem="YUG-3Z-g6V" secondAttribute="trailing" id="WKb-Li-cXM"/>
                 <constraint firstAttribute="bottom" secondItem="Osj-2l-aRF" secondAttribute="bottom" id="XKV-8h-t9E"/>
+                <constraint firstAttribute="bottom" secondItem="YUG-3Z-g6V" secondAttribute="bottom" id="bDk-f6-DNy"/>
                 <constraint firstAttribute="trailing" secondItem="Osj-2l-aRF" secondAttribute="trailing" id="hl8-GF-ARS"/>
                 <constraint firstItem="Osj-2l-aRF" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="wSv-Qr-DBN"/>
             </constraints>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4">
-                <size key="portraitSize" width="320" height="568"/>
-                <size key="landscapeSize" width="568" height="320"/>
-            </simulatedScreenMetrics>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
     <resources>
