--- a/iOS8Sampler/Samples/RubyAnnotationViewController.xib
+++ b/iOS8Sampler/Samples/RubyAnnotationViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6245"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RubyAnnotationViewController">
@@ -15,12 +15,18 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9jC-EE-UPY" customClass="RubyAnnotationLabel">
-                    <rect key="frame" x="0.0" y="64" width="320" height="500"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9jC-EE-UPY" customClass="RubyAnnotationLabel">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="9jC-EE-UPY" secondAttribute="bottom" id="DN7-zd-yHE"/>
+                <constraint firstAttribute="trailing" secondItem="9jC-EE-UPY" secondAttribute="trailing" id="MYn-oL-Vhg"/>
+                <constraint firstItem="9jC-EE-UPY" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="VMK-fF-gb9"/>
+                <constraint firstItem="9jC-EE-UPY" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="VQX-hE-FKQ"/>
+            </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
